# ProjectOnline

./: .editorconfig  .gitignore  .vimspector.json  CMakeLists.txt  CMakePresets.json  README.md  compile.bat  config.h.in  configure.bat  meson.build  vcpkg.json
assets/: imgui.ini
assets/lua_core/: core.lua  ecs.lua  input.lua  keys.lua  logger.lua  vector.lua
assets/scenes/: demo.ren  param.yaml
assets/scripts/: foo.lua  test.lua
docs/: custom_component.md  new_project.md  typing.md
src/: CMakeLists.txt  main.cpp  meson.build
src/Ren/: CMakeLists.txt  GameCore.cpp  Layer.cpp  LayerStack.cpp  Layers.cpp  meson.build
src/Ren/Core/: CMakeLists.txt  GameCore.cpp  Input.cpp  LayerStack.cpp  Startup.cpp  meson.build
src/Ren/ECS/: CMakeLists.txt  ComponentSystems.cpp  Components.cpp  Loaders.cpp  Scene.cpp  meson.build
src/Ren/ECS/Serialization/: ComponentSetups.cpp  SceneSerializer.cpp  meson.build
src/Ren/RenSDL/: CMakeLists.txt  Context.cpp  Texture.cpp  meson.build
src/Ren/Renderer/: CMakeLists.txt  Camera.cpp  Renderer.cpp  TextRenderer.cpp  meson.build
src/Ren/Scripting/: LuaScript.cpp  meson.build
src/Ren/Utils/: Basic.cpp  meson.build
src/editor/: Editor.cpp  Scene.cpp  meson.build
src/editor/include/: EditorLayer.hpp  GuiLogger.hpp  Scene.h  Scene.hpp
src/include/Ren/: Core.h  GameCore.h  KeyInterface.hpp  Layer.h  LayerStack.h  Layers.h  Ren.h  Ren.hpp  Startup.hpp
src/include/Ren/Core/: AssetManager.hpp  Camera.h  Core.h  GameCore.h  GameCore.hpp  Input.h  Input.hpp  KeyInterface.hpp  Layer.h  Layer.hpp  LayerStack.h  LayerStack.hpp  Startup.h  Startup.hpp
src/include/Ren/ECS/: ComponentSystems.h  ComponentSystems.hpp  Components.h  Loaders.hpp  NativeScript.h  RigidBodyComponent.h  RigidBodyComponent.hpp  Scene.h  Scene.hpp  SystemsManager.hpp
src/include/Ren/ECS/Serialization/: ComponentSetups.h  ComponentSetups.hpp  SceneSerializer.hpp  YAMLConversions.hpp
src/include/Ren/Physics/: Physics.h
src/include/Ren/RenSDL/: Context.hpp  Event.hpp  Keys.h  Texture.h  Texture.hpp
src/include/Ren/Renderer/: Camera.h  Camera.hpp  RenderCommand.hpp  Renderer.h  Renderer.hpp  TextRenderer.h  TextRenderer.hpp
src/include/Ren/Scripting/: LuaScript.h  LuaScript.hpp  NativeScript.h  NativeScript.hpp
src/include/Ren/Utils/: Basic.h  Basic.hpp  Data.hpp  FpsCounter.hpp  Logger.hpp
src/include/test_dir/: dummy.h
src/sandbox/: CMakeLists.txt  SandboxGame.cpp  main.cpp  meson.build
src/sandbox/include/: DemoLayer.hpp  GuiLogger.hpp  ImGuiLayer.hpp  sandbox.h  sandbox.hpp
src/sandbox/include/scripts/: Movement.hpp
src/test_dir/: CMakeLists.txt  dummy.cpp
subprojects/: box2d.wrap  entt.wrap  imgui.wrap  lua.wrap  nfd.wrap  ren_utils.wrap  sol2.wrap  yaml-cpp.wrap
